--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,15 +6,7 @@ android {
     defaultConfig {
         minSdkVersion 16
         targetSdkVersion 29
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-    }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
-        }
+        versionName "0.0.1"
     }
 }
 
@@ -22,6 +14,22 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation 'androidx.appcompat:appcompat:1.1.0'
     testImplementation 'junit:junit:4.12'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
 }
+
+ext {
+    publishGroupId = 'lk.chathurabuddi'
+    publishArtifactId = 'datetime-picker-wheel'
+    libraryDescription = 'This is an enhanced version of SingleDateAndTimePicker developed by florent37'
+
+    siteUrl = 'chathurabuddi.lk'
+    gitUrl = 'https://github.com/chathurabuddi/datetime-picker-wheel'
+
+    developerId = 'chathurabuddi'
+    developerName = 'Chathura Buddhika'
+    developerEmail = 'contact@chathurabuddi.lk'
+
+    licenseName = 'The Apache Software License, Version 2.0'
+    licenseUrl = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+}
+
+apply from: rootProject.file('gradle/publish_maven_local.gradle')
