--- a/.github/workflows/android-release.yml
+++ b/.github/workflows/android-release.yml
@@ -23,6 +23,10 @@ jobs:
         run: ./gradlew build
 
   release:
+    needs: build
+    env:
+      BINTRAY_USER: ${{ secrets.BINTRAY_USER }}
+      BINTRAY_API_KEY: ${{ secrets.BINTRAY_API_KEY }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
